--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,45 @@
 
 /* Your CSS Code here. */
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+nav {
+  background-color: #333;
+  color: white;
+  padding: 1em;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-right: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+section {
+  padding: 1em;
+  margin: 10px;
+  background-color: #f9f9f9;
+}
+
+h2 {
+  color: #333;
+}
+
+audio {
+  width: 100%;
+  margin-top: 10px;
+}
